# python-project-83

./: .gitignore  .python-version  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: __init__.py  app.py  base.html  database.py  index.html  parse_page.py  parser.py  urls_repo.py  validator.py
page_analyzer/templates/: index.html  interval_server_error.html  layout.html  pagenot_found.html  url.html  urls.html
