[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["DenisDolgov1991 <dolgovdenis1991@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.8.10"
flask = "^2.3.2"
gunicorn = "^20.1.0"
psycopg2-bynary = "^2.9.5"
validators = "^0.20.0"
request = "^2.28.2"
python-dotenv = "^1.0.0"
beautifulsoup = "^3.2.0"

[tool.poetry.dev-dependencies]
flake8 = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
