[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["DenisDolgov1991 <dolgovdenis1991@yandex.ru>"]
readme = "README.md"
packages = [
    {include = "python_project_83"}
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
